<resources>

    <!-- back4app_server_url -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>


    <string name="app_name">Client Management System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hour_default">16:30</string>
    <string name="date_default">21/03</string>
    <string name="year_default">2020</string>
    <string name="menu_purchase">Purchases</string>
    <string name="menu_clients">Clients</string>
    <string name="empty" />
    <string name="todo">Todo</string>
    <string name="client_name">Client name</string>
    <string name="category_name">Category name</string>
    <string name="add_name">Client\'s name</string>
    <string name="type">Type</string>
    <string name="weight">Weight</string>
    <string name="cash">Cash :</string>
    <string name="debt">Debt :</string>
    <string name="check">Check :</string>
    <string name="_1000">1000</string>
    <string name="_200">200</string>
    <string name="edit">Edit</string>
    <string name="pick_category">Pick a category</string>
    <string name="icon">icon</string>
    <string name="add_date">Date</string>
    <string name="add_category">Category name</string>
    <string name="add_weight">Weight</string>
    <string name="payment_method">Payment method (in $)</string>
    <string name="add_notes">notes…</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="sync">Synchronize</string>
    <string name="filter">Filter</string>
    <string name="show_all">Show all</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="contact_name">Contact name</string>
    <string name="phone_number">Phone number</string>
    <string name="address_details">Address details</string>
    <string name="add_phone_number">Phone number</string>
    <string name="add_address_details">address details</string>
    <string name="pick_client">Pick client</string>
    <string name="add_outlay">Outlay</string>
    <string name="sales">Sales :</string>
    <string name="total_sales">Total sales</string>
    <string name="paid">Paid :</string>
    <string name="total_paid">Total paid</string>
    <string name="quantity">Quantity :</string>
    <string name="total_quantity">Total quantity</string>
    <string name="Kg">Kg</string>
    <string name="total_cash">Total cash</string>
    <string name="total_debt">Total debt</string>
    <string name="menu_accounting">Accounting</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="loading">Loading…</string>
    <string name="app_id">App Id</string>
    <string name="client_key">Client Key</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Feedback preference -->
    <string name="feedback">Feedback</string>
    <string name="send_feedback">send_feedback</string>

    <!-- Preference Titles -->
    <string name="app_id_pref">APP_ID</string>
    <string name="client_key_pref">CLIENT_KEY</string>

    <!-- LOCAL DATA STORE LABEL -->
    <string name="all_purchases">ALL_PURCHASES</string>
    <string name="all_clients">ALL_CLIENTS</string>
    <string name="all_categories">ALL_CATEGORIES</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync data on start</string>
    <string name="sync_data_on_start">sync_data_on_start</string>
    <string name="attachment_summary_on">Automatically download data when starting application</string>
    <string name="attachment_summary_off">Only download data when manually requested</string>
    <string name="menu_categories">Categories</string>
    <string name="price_per_kg_">Price (per Kg):</string>
    <string name="price_per_kg">Price (per Kg)</string>
    <string name="color_pick">Pick a color</string>
    <string name="select">Select</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email address</string>
    <string name="logout">Logout</string>
    <bool name="sync_preference_default_value">false</bool>

</resources>