<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sync"
        android:orderInCategory="100"
        android:title="@string/sync"
        app:showAsAction="never" />

    <item
        android:id="@+id/filter"
        android:orderInCategory="100"
        android:title="@string/filter"
        app:showAsAction="never" />

    <item
        android:id="@+id/show_all"
        android:orderInCategory="100"
        android:title="@string/show_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>