<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_purchases">

    <fragment
        android:id="@+id/nav_purchases"
        android:name="com.clientsinfo.ui.purchases.PurchasesFragment"
        android:label="@string/menu_purchase"
        tools:layout="@layout/fragment_purchases" />

    <fragment
        android:id="@+id/nav_clients"
        android:name="com.clientsinfo.ui.clients.ClientsFragment"
        android:label="@string/menu_clients"
        tools:layout="@layout/fragment_clients" />

    <fragment
        android:id="@+id/nav_accounting"
        android:name="com.clientsinfo.ui.accounting.AccountingFragment"
        android:label="@string/menu_accounting"
        tools:layout="@layout/fragment_accounting" />
</navigation>