<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.daimajia.swipe.SwipeLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Bottom View Start-->
        <LinearLayout
            android:id="@+id/delete"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:background="#FF0000"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/done"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/delete" />

        </LinearLayout>
        <!-- Bottom View End-->

        <!-- Surface View Start -->
        <LinearLayout
            android:id="@+id/main_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="22"
                android:background="#456345" />

            <RelativeLayout
                android:id="@+id/showItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/dateView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/grid_layout_children_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hour_default"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/dayMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_default"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year_default"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/grid_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/dateView"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/dateView"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/client_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/grid_layout_children_margin"
                        android:layout_marginEnd="@dimen/grid_layout_children_margin"
                        android:layout_marginBottom="@dimen/grid_layout_children_margin"
                        android:text="@string/client_name" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:layout_margin="@dimen/grid_layout_children_margin">

                        <TextView
                            android:id="@+id/type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/type" />

                        <TextView
                            android:id="@+id/weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@string/weight" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:layout_margin="@dimen/grid_layout_children_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cash" />

                        <TextView
                            android:id="@+id/cash"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@string/_1000" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/debt" />

                        <TextView
                            android:id="@+id/debt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@string/_200" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/check" />

                        <TextView
                            android:id="@+id/check"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@string/_200" />
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
        <!-- Surface View End -->
    </com.daimajia.swipe.SwipeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="0dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>